--- a/nft-marketplace/package.json
+++ b/nft-marketplace/package.json
@@ -12,6 +12,7 @@
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.6.0",
+    "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.4",
@@ -19,8 +20,11 @@
     "hardhat": "^2.9.3",
     "ipfs-http-client": "^56.0.3",
     "meteor-node-stubs": "^1.2.1",
+    "postcss": "^8.4.13",
+    "postcss-load-config": "^3.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "tailwindcss": "^3.0.24",
     "web3modal": "^1.9.7"
   },
   "meteor": {
