--- a/nft-marketplace/package.json
+++ b/nft-marketplace/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.15.4",
+    "@headlessui/react": "^1.6.1",
+    "@heroicons/react": "^1.0.6",
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.6.0",
@@ -24,6 +26,7 @@
     "postcss-load-config": "^3.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0",
     "tailwindcss": "^3.0.24",
     "web3modal": "^1.9.7"
   },
