--- a/nft-marketplace/package.json
+++ b/nft-marketplace/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
     "chai": "^4.3.6",
+    "electron": "^18.2.0",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.5",
     "hardhat": "^2.9.3",
