--- a/nft-marketplace/package.json
+++ b/nft-marketplace/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
     "tailwindcss": "^3.0.24",
+    "truncate-eth-address": "^1.0.2",
     "web3modal": "^1.9.7"
   },
   "meteor": {
