--- a/tailwindcss/package.json
+++ b/tailwindcss/package.json
@@ -1,13 +1,13 @@
 {
   "name": "tailwind-meteor-example",
   "scripts": {
-    "start": "meteor run"
+    "start": "yarn && meteor run"
   },
   "dependencies": {
     "@babel/runtime": "^7.13.9",
     "autoprefixer": "^10.2.5",
     "meteor-node-stubs": "^1.0.1",
-    "postcss": "^8.2.7",
+    "postcss": "^8.4.18",
     "postcss-load-config": "^3.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
